# tauri-test

./: .gitignore  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  menu.rs
src/components/: Modal.tsx  Test.tsx
