[package]
name = "om"
version = "0.0.1"
description = "Odoo Manager"
authors = ["Eimis"]
license = "MIT"
repository = ""
default-run = "om"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# tauri = { version = "1.0.0-beta.4", features = ["api-all"] }
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "dev", features = ["api-all", "menu"] }


[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
